# Animat

./: README.md
Doc/: animat.html  color_filter.html  focus.html  index.html  lgn2v1.html  smallbot.html
Doc/Formalization/: formal.tex
Doc/design/: Banner.xcf  animat.css
Doc/lgn2v1/: distortion.fig  input.fig  lgn.fig  topics.txt
ROS/animat/: CMakeLists.txt  package.xml
ROS/animat/cfg/: embodiment.cfg  physiology.cfg  vision.cfg
ROS/animat/launch/: harwired-controler.launch  harwired_controler.launch  interface-demo.launch  vision-demo.launch
ROS/animat/params/: hardwired-controler-physiology.yaml  interface-demo-embodiment.yaml  interface-demo-vision.yaml  vision-demo-lgn2v1.yaml  vision-demo-locus.yaml  vision-demo-vision.yaml
ROS/animat/scripts/: animat_teleop.py  embodiment.py  hardwired.py  physiology.py  vision.py
ROS/color_filter/: CMakeLists.txt  package.xml
ROS/color_filter/cfg/: param.cfg
ROS/color_filter/launch/: color-filter-demo.launch
ROS/color_filter/msg/: HSVParams.msg
ROS/color_filter/share/: mire.py
ROS/color_filter/src/: color-filter-hsv-node.cc
ROS/focus/: CMakeLists.txt  package.xml
ROS/focus/cfg/: locus.cfg  param.cfg
ROS/focus/launch/: focus-demo.launch  locus-demo.launch  locus-lgn-demo.launch
ROS/focus/scripts/: locus.py
ROS/focus/src/: convolution_fftw.cc  convolution_fftw.h  focus-node.cc  neuralfield.cc  neuralfield.hpp  shell.sh
ROS/lgn2v1/: CMakeLists.txt  package.xml
ROS/lgn2v1/cfg/: param.cfg
ROS/lgn2v1/launch/: lgn2v1-demo.launch
ROS/lgn2v1/src/: lgn2v1-node.cc  lgn2v1.hpp
V-REP/: food.ttm  smallbot.ttm  water.ttm  xor.ttt
